--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -2390,6 +2390,45 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
 }
 
+.btn-info-contact {
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+  padding: 12px 30px;
+}
+
+.btn-info-contact:hover {
+  color: #fff;
+  background-color: #138496;
+  border-color: #117a8b;
+}
+
+.btn-info-contact:focus, .btn-info-contact.focus {
+  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+}
+
+.btn-info-contact.disabled, .btn-info-contact:disabled {
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+}
+
+.btn-info-contact:not(:disabled):not(.disabled):active, .btn-info-contact:not(:disabled):not(.disabled).active,
+.show > .btn-info-contact.dropdown-toggle {
+  color: #fff;
+  background-color: #117a8b;
+  border-color: #10707f;
+}
+
+.btn-info-contact:not(:disabled):not(.disabled):active:focus, .btn-info-contact:not(:disabled):not(.disabled).active:focus,
+.show > .btn-info-contact.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+}
+
+.control-group {
+display: inline-block;
+}
+
 .btn-warning {
   color: #212529;
   background-color: #ffc107;
@@ -6205,7 +6244,14 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 72px);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(../img/bg-masthead.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
