--- a/css/styles.css
+++ b/css/styles.css
@@ -10008,7 +10008,7 @@ h3 {
   }
 }
 .page-section {
-  padding: 6rem 0;
+  padding: 4rem 0;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -10016,6 +10016,20 @@ h3 {
 }
 @media (min-width: 992px) {
   .page-section .page-section-heading {
+    font-size: 3rem;
+    line-height: 2.5rem;
+  }
+}
+
+.page-section-certificates {
+  padding: 1rem 0;
+}
+.page-section-certificates .page-section-certificates-heading {
+  font-size: 2.25rem;
+  line-height: 2rem;
+}
+@media (min-width: 992px) {
+  .page-section-certificates .page-section-certificates-heading {
     font-size: 3rem;
     line-height: 2.5rem;
   }
