--- a/css/styles.css
+++ b/css/styles.css
@@ -3986,6 +3986,7 @@ input[type=button].btn-block {
   justify-content: space-between;
   padding: 0.5rem 1rem;
 }
+
 .navbar .container,
 .navbar .container-fluid,
 .navbar .container-sm,
@@ -4043,8 +4044,8 @@ input[type=button].btn-block {
   font-size: 1.25rem;
   line-height: 1;
   background-color: transparent;
-  border: 0.125rem solid transparent;
-  border-radius: 0.5rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
 }
 .navbar-toggler:hover, .navbar-toggler:focus {
   text-decoration: none;
@@ -10123,6 +10124,26 @@ h3 {
   font-size: 80%;
   padding: 0.8rem;
 }
+#mainNav.navbar-scrolled {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    background-color: #fff;
+  }
+  #mainNav.navbar-scrolled .navbar-brand {
+    color: #212529;
+  }
+  #mainNav.navbar-scrolled .navbar-brand:hover {
+    color: #99BD76;
+  }
+  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
+    color: #212529;
+  }
+  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
+    color: #99BD76;
+  }
+
+
+
+
 
 @media (min-width: 992px) {
   #mainNav {
@@ -10281,4 +10302,31 @@ form .row:first-child .floating-label-form-group {
 
 .copyright {
   background-color: #1a252f;
+}
+
+::-webkit-scrollbar{
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
+    width:12px;
+}
+
+::-webkit-scrollbar-thumb{
+    
+    border-radius: 3px;
+    border-color: #777;
+    background-color: #aaa;
+}
+
+::-webkit-scrollbar-thumb:hover{
+
+    border-radius: 3px;
+    border-width: 1px 1px 1px 2px;
+    border-color: #555;
+    background-color: #777;
+}
+
+::-webkit-scrollbar-track:hover{
+
+    border-left: solid 1px #aaa;
+    background-color: #eee;
 }
