--- a/css/styles.css
+++ b/css/styles.css
@@ -3759,6 +3759,22 @@ input[type=button].btn-block {
 .custom-range:focus {
   outline: none;
 }
+
+.3dOff{}
+
+@media (max-width: 500px) {
+  .3dOff {
+    display: none;
+  }
+}
+
+.3dOn{}
+@media (min-width: 501px) {
+  .3dOn {
+    display: none;
+  }
+}
+
 .custom-range:focus::-webkit-slider-thumb {
   box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(26, 188, 156, 0.25);
 }
