--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,11 @@ h6, .h6 {
   line-height: 1.2;
 }
 
+.about-info {
+  font-size: 1.5rem;
+  line-height: 1.2;
+}
+
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
