--- a/css/styles.css
+++ b/css/styles.css
@@ -10031,6 +10031,7 @@ h3 {
 }
 .page-section {
   padding: 4rem 0;
+  position: relative;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -10318,8 +10319,8 @@ form .row:first-child .floating-label-form-group {
 }
 
 .footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #2c3e50;
   color: #fff;
 }
@@ -10456,4 +10457,31 @@ form .row:first-child .floating-label-form-group {
   position: absolute;
   z-index: -1;
   top: 0;
+}
+
+canvas{
+  display:block;
+  vertical-align:bottom;
+}
+
+#particles-js {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
+.page-section-bg {
+  position: relative;
+  z-index: 100;
+}
+
+.particles-js-canvas-el {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 10;
 }
