--- a/css/styles.css
+++ b/css/styles.css
@@ -10224,6 +10224,12 @@ h3 {
   }
 }
 
+@media (max-width: 400px) {
+  .masthead {
+    padding-top: calc(0rem + 60px);
+  }
+}
+
 .portfolio .portfolio-item {
   cursor: pointer;
   position: relative;
